<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">RetroBoy</string>
    <string name="action_settings">Settings</string>
    <string name="action_library">Game Library</string>
    <string name="action_load_rom">Load ROM</string>
    <string name="action_save_state">Save State</string>
    <string name="action_load_state">Load State</string>
    
    <!-- Main Menu -->
    <string name="menu_continue">Continue Game</string>
    <string name="menu_library">Game Library</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>
    
    <!-- Game Library -->
    <string name="library_title">Game Library</string>
    <string name="library_classics">Classics</string>
    <string name="library_homebrew">Homebrew</string>
    <string name="load_rom_file">Load ROM File</string>
    
    <!-- Emulator Controls -->
    <string name="btn_start">START</string>
    <string name="btn_select">SELECT</string>
    <string name="btn_a">A</string>
    <string name="btn_b">B</string>
    
    <!-- Settings -->
    <string name="settings_title">Settings</string>
    <string name="settings_sound">Sound</string>
    <string name="settings_vibration">Vibration</string>
    <string name="settings_autosave">Auto-save</string>
    <string name="settings_fps">Show FPS</string>
    <string name="settings_filter">Screen Filter</string>
    <string name="settings_controls">Controls</string>
    
    <!-- Messages -->
    <string name="msg_game_loaded">Game loaded!</string>
    <string name="msg_game_saved">Game saved!</string>
    <string name="msg_game_loaded_slot">Loaded slot %d</string>
    <string name="msg_no_game">No game loaded</string>
    <string name="msg_loading">Loading…</string>
    
    <!-- About -->
    <string name="about_title">About RetroBoy</string>
    <string name="about_description">A Game Boy emulator for Android</string>
    <string name="about_version">Version 1.0</string>
    
    <!-- Arrays -->
    <string-array name="filter_options">
        <item>None</item>
        <item>Scanlines</item>
        <item>CRT</item>
        <item>GB Classic</item>
    </string-array>
</resources>
